 - gui: added explicit =delete for copy and move constructors when appropriate
 - gui: added event_data class
 - gui: added frame::get_rough_num_children and get_rough_num_regions
 - gui: added uiroot to hold root frames
 - gui: added virtual_uiroot to hold virtual root frames
 - gui: added factory to manage uiobject creation functions
 - gui: added registry to handle uiobject lookup by name
 - gui: added uiobject::is_loaded() and clarify the semantic
 - gui: renamed gui::manager_impl into gui::renderer
 - gui: renamed gui::gl::manager into gui::gl::renderer
 - gui: renamed gui::gl::matrix4f into gui::matrix4f and reworked internals of the class
 - gui: renamed frame::on into frame::on_script
 - gui: renamed frame::fire_build_layer_list into frame::notify_layers_need_update
 - gui: renamed frame_renderer::fire_redraw into notify_strata_needs_redraw
 - gui: renamed uiobject::fire_udpate_borders to uiobject::notify_borders_need_update
 - gui: renamed color::chanel to color::channel
 - gui: renamed quad2 to bounds2
 - gui: renamed font_string::set_offsets to set_offset
 - gui: renamed font_string::get_offsets to get_offset
 - gui: renamed font_string::set_shadow_offsets to set_shadow_offset
 - gui: renamed font_string::get_shadow_offsets to get_shadow_offset
 - gui: renamed uiobject::set_abs_width/height/dimensions to set_width/height/dimensions
 - gui: renamed uiobject::set_rel_width/height/dimensions to set_relative_width/height/dimensions
 - gui: renamed frame::get/set_min/max_resize to get/set_min/max_dimensions
 - gui: removed Frame:on from Lua API (instead, call scripts directly, e.g.: frame:on_update())
 - gui: removed the sprite class
 - gui: removed uiobject::get_base()
 - gui: removed uiobject::push_on_lua()
 - gui: removed uiobject::get_id() and set_id()
 - gui: removed anchor::set_object() (now a reference, cannot change)
 - gui: removed font_string::get_shadow_x_offset()
 - gui: removed font_string::get_shadow_y_offset()