@@ -93,7 +93,7 @@ try
 
     // Update the gui
     SDL_GL_MakeCurrent(mContext.pWindow, mContext.pGLContext);
-    mContext.pManager->update(mContext.fDelta);
+    mContext.pManager->update_ui(mContext.fDelta);
 
     // Your own rendering would go here!
     // For this example, we just clear the window
