@@ -149,7 +149,7 @@ int main(int argc, char* argv[])
             }
 
             // Update the gui
-            pManager->update(fDelta);
+            pManager->update_ui(fDelta);
 
             // Your own rendering would go here!
             // For this example, we just clear the window
